fixed highscore bar visual bug on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,6 @@ body{
   border: .8em solid;
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   height: 100vh;
-  padding: .7em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .instructions{
@@ -31,18 +27,24 @@ body{
   color: rgba(0, 0, 0, 0.516);
   letter-spacing: 2px;
 }
+
+.score-heading{
+  border-bottom: 1px solid whitesmoke;
+}
 .topScore{
-  position: absolute;
+  /* position: absolute;
   top: .6em;
   right: .6em;
-  left: .6em;
+  left: .6em; */
   padding: .5em;
   background-color: rgba(134, 88, 162, 0.959);
   font-size: 1.3rem;
   color: whitesmoke;
   display: flex;
+  align-self: flex-start;
   align-items: center;
   justify-content: center;
+  justify-self: start;
   flex-direction: column;
   letter-spacing: 1px;
 
